# NYC_GradMeta

./: .gitignore  README.md  pyproject.toml  setup.cfg
configs/: nyc.json  nyc.yaml
data/processed/: cases_nyc_daily.csv  mobility_nyc_daily.csv  nyc_master_daily.csv  nyc_test.csv  opentable_yoy_daily.csv  population_nyc_age16_2020.csv  population_us.csv  trends_us_ny_daily.csv
data/processed/online/: public_feature_map_2022-10-15.csv  split_info_2020-08-05_matched_ot_w0.json  split_info_2020-08-05_matched_ot_w3.json  split_info_2020-08-05_matched_ot_w7.json  split_info_2022-10-15.json  split_info_2022-10-15_history170_w0.json  split_info_2022-10-15_history170_w3.json  test_2022-10-15.csv  (+17 more)
notebooks/: nyc_data_exploration.ipynb
scripts/: build_data.sh  build_private_opentable_tensor.py  check_gpu_env.py  extract_thesis_results.py  plot_matched_dp_summary.py  prepare_online_nyc.py  run_all.sh  run_from_processed.sh  run_matched_ab_grid.sh  run_matched_dp_grid_w7.sh  run_nyc_master_only.sh  run_nyc_with_opentable.sh  run_visualization.sh  setup_linux_5090.sh  smoke_test_smoothing.sh  train_nyc.sh
src/nyc_gradmeta/: eval.py  train.py  utils.py  visualization.py
src/nyc_gradmeta.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
thesis_tables/: build_thesis_tables.py  table1_data_contract.tex  table2_experimental_conditions.tex  table3_final_metrics.tex  table4_module_training_summary.tex  table5_dp_calibration_summary.tex  tableA1_reproducibility_artifact_checklist.tex
thesis_visualizations/: build_fig2_timeline.py  build_thesis_figures.py
(+204 files in other folders)
